src/app/features/tasks/task/task.component.scss
/* ... */
.controls {
  white-space: nowrap;
  text-align: right;
  margin-right: 2px;

  @include mq(xs, max) {
    white-space: normal;
    margin-left: 5px;
  }
}


.inner-wrapper {
  position: relative;

  > .first-line {
    position: relative;
  }

  > .box {
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    top: 0;
    transition: $transition-standard;
    transition-property: transform;
    box-shadow: $shadow-card-shadow;
    border-radius: $card-border-radius;
    border: 1px solid $light-theme-extra-border-color;

    @include darkTheme {
      border-color: $dark-theme-extra-border-color;
    }
  }

  &.isCurrent > .box {
    transform: scale($this-current-task-zoom);
    box-shadow: $this-active-shadow;
    border-color: transparent;
  }

  &.isDone {
    > .first-line {
      position: relative;

      .time-wrapper,
      .controls,
      .title-bar-wrapper {
        opacity: 0.3;
      }

      .time {
        opacity: 1;
      }

      .task-title {
        //color: $this-task-text-color-done;
        //text-decoration: line-through;
      }
    }
  }
}

.drag-handle {
  min-width: 24px;
  margin: 0 4px 0 9px;
  position: relative;
  z-index: $z-drag-handle;
  cursor: grab;
  @extend %standardTaskOpacityChange;

  // fixes drag and drop on mobile
  touch-action: none;

  &:active {
    cursor: grabbing;
  }

  // hit area
  &:after {
    content: '';
    position: absolute;
    top: -$s*0.25;
    bottom: -$s*0.25;
    left: -$s*0.25;
    right: -$s*0.25;

    @include mq(xs) {
      top: -$s*2;
      bottom: -$s*2;
      left: -$s*2;
      right: -$s*0.5;
    }
  }
}

.task-title {
  flex-grow: 1;
  text-align: left;
  outline: none;
  margin-left: 2px;
  padding: 4px 0 4px 6px;
  line-height: 1.5;
  min-height: 20px;
  text-overflow: ellipsis;
  cursor: text;
  transition: $transition-leave;
  transition-property: opacity, transform;
  background: inherit;
  position: relative;
  overflow: visible;
  user-select: none;
  caret-color: #000000;
  z-index: $z-task-title;

  // needs to be block for it not to mess up
  display: block !important;

  @include darkTheme() {
    caret-color: #ffffff;
  }

  &:first-letter {
    // we can't do this, as this messes up text input :/
    // text-transform: uppercase;
  }

  .isCurrent & {
    font-weight: bold;
  }

  &:after {
    transition: $transition-leave;
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    content: '';
    box-shadow: $shadow-edit-on-click;
    opacity: 0;
    z-index: -1;
    border: 1px solid black;
    pointer-events: none;
    background: #fff;

    @include darkTheme() {
      background: $dark-theme-bg-lighter;
      border: 1px solid #ffffff;
      box-shadow: 0 0 4px 0 rgba(255, 255, 255, 0.8), $whiteframe-shadow-13dp;
    }
  }


  &:focus {
    z-index: $z-task-title-focus;
    user-select: all;
    // thee magic number is 16/14 so we scale to whole pixels
    transform: scale(1.142857143);
    transition: $transition-standard;
    @include darkTheme() {
      color: #fff;
    }

    .is-hide-controls & {
      transform-origin: center center;
      transform: scale(1.142857143) translateX(20px);
    }

    &:after {
      opacity: 1;
      transition: $transition-standard;
    }

    @include mq(xs, max) {
      transform: scale(1);
    }
  }
}

input {
  width: 100%;
  display: block;
  box-sizing: border-box;
  height: 30px;
  padding: 4px 10px;
  border: none;
}

.time-wrapper {
  position: relative;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: stretch;
  padding-right: $s;
  z-index: $z-time-wrapper;

  &.isEditable {
    cursor: pointer;

    button {
      transition: $transition-standard !important;
      opacity: 0 !important;
    }

    &:hover {
      .time,
      button {
        transition: $transition-standard;
        opacity: 1 !important;
      }
    }
  }

  .time {
    font-style: italic;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    opacity: 0.8;
    font-weight: 300;

    @include mq(xs) {
      opacity: 0.35;
    }

    @include mq(xs, max) {
      font-size: 13px;
    }

    :host:focus > .inner-wrapper > .first-line &,
      //:host:hover > .inner-wrapper > .first-line &,
    .inner-wrapper.isCurrent > .first-line & {
      opacity: 1;
    }

    .time-val,
    .separator {
      display: block;
      white-space: nowrap;
    }

    .separator {
      padding: 0 $s/2;
    }
  }

}


.additional-info {
  display: block;
  // required as sort of a clearfix (fixes padding issue)
  overflow: hidden;
}

.drag-over-msg {
  pointer-events: none;
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  opacity: 1;
  justify-content: center;
  align-items: center;
  font-weight: bold;
  display: flex;
  z-index: $z-drag-over-msg;
}

.time-btn {
  position: relative;
  overflow: visible;

  ::ng-deep .svg-wrapper {
    z-index: $z-time-btn-svg-wrapper;
    position: absolute;
    width: 44px;
    height: 44px;
    top: 50%;
    left: 50%;
    transform: translate3d(-50%, -50%, 0);
  }
}

.check-done {
  opacity: 0.5;
  position: absolute;
  left: 50%;
  top: 50%;
  display: block;
  z-index: $z-check-done;
  transform: translate(-50%, -50%);
  transition: $transition-standard;


  &:hover {
    opacity: 1 !important;
  }

  mat-icon {
    $this-size: 40px;
    font-size: $this-size;
    height: $this-size;
    width: $this-size;
    line-height: $this-size;

    &.undo {
      display: none;
    }
  }

  &:hover {
    mat-icon {
      animation: $transition-duration-m success-btn-ani linear;
    }

    .check {
      display: none;
    }

    .undo {
      display: block;
    }
  }
}

progress-bar {
  z-index: $z-progress-bar;
}
/* ... */

